# crud.rs

./: CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  rustfmt.toml
.github/workflows/: release.yml  rust.yml
crud/: Cargo.toml  Makefile  README.md  README.tpl
crud-api/: Cargo.toml  Makefile.toml  README.md
crud-api-derive/: Cargo.toml  README.md
crud-api-derive/src/: api.rs  config.rs  gen_clap_declarations.rs  gen_clap_matches.rs  gen_init.rs  input.rs  lib.rs
crud-api-derive/src/input/: enums.rs  serde.rs  structs.rs
crud-api-endpoint/: Cargo.toml  README.md
crud-api-endpoint/src/: api.rs  api_run.rs  config.rs  input.rs  lib.rs  types.rs
crud-api/examples/: enum.rs  gitlab_partial.rs  jsonplaceholder_api.rs
crud-api/src/: cli.rs  completions.rs  error.rs  formats.rs  http.rs  lib.rs  settings.rs  upload.rs
crud-auth/: Cargo.toml  Makefile.toml  README.md
crud-auth-bearer/: Cargo.toml  README.md
crud-auth-bearer/src/: lib.rs
crud-auth-no-auth/: Cargo.toml  Makefile.toml  README.md
crud-auth-no-auth/src/: lib.rs
crud-auth/src/: lib.rs
crud-derive/: Cargo.toml  README.md
crud-derive/src/: crud.rs  lib.rs
crud-pretty-struct/: Cargo.toml  Makefile.toml  README.md  bacon.toml
crud-pretty-struct-derive/: Cargo.toml
crud-pretty-struct-derive/src/: lib.rs  types.rs
crud-pretty-struct/src/: formatters.rs  lib.rs
crud-pretty-struct/src/impls/: hashmap.rs  mod.rs  value.rs
crud-pretty-struct/tests/: pretty.rs
crud-tidy-viewer/: Cargo.toml  README.md
crud-tidy-viewer/examples/: tv.rs
crud-tidy-viewer/src/: datatype.rs  lib.rs
crud-tidy-viewer/src/datatype/: sigfig.rs
crud/examples/: jsonplaceholder.rs
crud/src/: lib.rs
