[workspace]
resolver = "2"
members = [
        "crud",
        "crud-derive",
        "crud-api",
        "crud-api-derive",
        "crud-api-endpoint",
        "crud-tidy-viewer",
        "crud-pretty-struct",
        "crud-pretty-struct-derive",
        "crud-auth",
        "crud-auth-bearer",
        "crud-auth-no-auth"
]
