[workspace]
resolver = "2"
members = [
        "crud",
        "crud-api",
        "crud-api-derive",
        "crud-api-endpoint",
        "crud-auth",
        "crud-auth-bearer",
        "crud-auth-no-auth",
        "crud-derive",
        "crud-pretty-struct",
        "crud-pretty-struct-derive",
        "crud-tidy-viewer"]

#crud-api-derive = {version = "0.1", path="./crud-api-derive", features=["dump-derives"]}
[workspace.dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.22"
bytesize = {version ="2"}
calm_io = "0.1"
case = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std","serde","clock"] }
clap = { version = "4.4", features = ["color", "suggestions", "env","unicode","wrap_help","cargo"] }
clap_complete = "4.4"
config = "0.15"
crossterm = "0.28"
crud-api = { version = "0.1", path = "./crud-api" }
crud-api-derive = { version = "0.1", path = "./crud-api-derive" }
crud-api-endpoint ={ version = "0.1", path = "./crud-api-endpoint" }
crud-auth = { version = "0.1", path = "./crud-auth" }
crud-auth-bearer = { version = "0.1", path = "./crud-auth-bearer" }
crud-auth-no-auth = { version = "0.1", path = "./crud-auth-no-auth" }
crud-derive = { version = "0.1", path = "./crud-derive" }
crud-pretty-struct = { version = "0.1", path = "./crud-pretty-struct" }
crud-pretty-struct-derive = { version = "0.1", path = "./crud-pretty-struct-derive" }
crud-tidy-viewer = { version = "0.1", path = "./crud-tidy-viewer" }
csv = { version = "1.1" }
darling = "0.20"
derive_builder = "0.20"
directories = "6"
humantime = {version ="2.1"}
hyper = { version = "1", features = ["client","http1"] }
http = "1"
http-body-util = "0.1"
hyper-tls = { version = "0.6" }
hyper-util = { version = "0.1", features = ["client-legacy", "client","http1","tokio"] }
indicatif = "0.17"
is-terminal = "0.4"
itertools = "0.14"
lazy_static = "1.4"
log = "^0.4"
miette = { version = "7", features = ["fancy"] }
openssl = { version = "0.10", features = ["vendored"] }
owo-colors = "4"
pad = "0.1"
pki-types = { package = "rustls-pki-types", version = "1" }
pretty_env_logger = "^0.5"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.6.0"
scratch = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.14"
serde_repr = "0.1"
serde_yaml = { version = "0.9" }
strum = { version = "0.27", features = ["derive"] }
syn = { version = "2.0", features = ["extra-traits"] }
termimad = {version ="0.31"}
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
toml = { version = "0.8" }
toml_edit = { version = "0.22" }
unicode-width = "0.2"
unicode-truncate = "2"
webpki-roots = "0.26"

