[package]
name = "crud-api-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true
path = "src/lib.rs" # required by `cargo readme`


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crud-api-endpoint={version = "0.1", path="../crud-api-endpoint"}
syn = {version="1.0", features=["extra-traits"]}
quote = "1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.32"
derive_builder = "0.11.2"
darling = "0.14.1"

[features]
dump-derives=[]