[package]
name = "crud-api-endpoint"
version = "0.1.7"
edition = "2021"
description= "CLI generator for your API. Enpoint description"
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {workspace=true}
derive_builder = {workspace=true}
darling = {workspace=true}
proc-macro-error = {workspace=true}
proc-macro2 = {workspace=true}
quote = {workspace=true}
lazy_static = {workspace=true}
serde_json = {workspace=true}
serde = {workspace=true}
scratch = {workspace=true}


# dev-dependencies for running the doc tests
[dev-dependencies]
crud-api = {workspace=true}
crud-auth-no-auth = {workspace=true}
crud-auth = {workspace=true}
clap = {workspace=true}
log = {workspace=true}
pretty_env_logger = {workspace=true}
miette = {workspace=true}
openssl = {workspace=true}

