[package]
name = "crud-api"
version = "0.1.0"
edition = "2021"
description= "CLI generator for your API."
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crud-api-derive = {version = "0.1", path="../crud-api-derive"}
#crud-api-derive = {version = "0.1", path="../crud-api-derive", features=["dump-derives"]}
crud-tidy-viewer = {version = "0.1", path="../crud-tidy-viewer"}
crud-auth = {version = "0.1", path="../crud-auth"}

clap = { version = "4.0", features = ["env","unicode","wrap_help","cargo"] }
clap_complete = "4.0"
config = "0.13"
directories = "4.0"
log = "^0.4"
pretty_env_logger = "^0.4"
dotenv = "0.15"


async-trait = "0.1.51"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = { version = "0.5" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.73"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_yaml = {version= "0.8.24", optional=true}
csv = {version="1.1.6", optional=true}
serde_qs = "0.9.2"
indicatif = "0.16.2"
miette = { version = "5.1.1", features = ["fancy"] }
thiserror = "1.0.31"
owo-colors = "3.4.0"
regex = "1.6.0"

[dev-dependencies]
crud-auth-no-auth = {version = "0.1", path="../crud-auth-no-auth"}
crud-auth-bearer = {version = "0.1", path="../crud-auth-bearer"}
chrono = { version = "0.4.19", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }


[features]
default=["csv","yaml","json","toml"]
csv= ["dep:csv"]
dump-derives=["crud-api-derive/dump-derives"]
yaml= ["dep:serde_yaml"]
json=[]
toml=[]
debug-http=[]
