[package]
name = "crud-api"
version = "0.1.5"
edition = "2021"
description= "CLI generator for your API."
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {workspace=true}
base64 = {workspace=true}
clap = {workspace=true}
clap_complete = {workspace=true}
config = {workspace=true}
crud-api-derive = {workspace=true}
crud-auth = {workspace=true}
crud-pretty-struct = {workspace=true}
crud-tidy-viewer = {workspace=true}
csv = {workspace=true, optional=true}
directories = {workspace=true}
http = {workspace=true}
http-body-util = {workspace=true}
hyper = {workspace=true}
hyper-util = {workspace=true}
indicatif = {workspace=true}
log = {workspace=true}
miette = {workspace=true}
owo-colors = {workspace=true}
pki-types = {workspace=true}
regex = {workspace=true}
serde = {workspace=true}
serde_json = {workspace=true}
serde_qs = {workspace=true}
serde_yaml = {workspace=true, optional=true}
thiserror = {workspace=true}
tokio = {workspace=true}
tokio-rustls = {workspace=true}
toml = {workspace=true, optional=true}
webpki-roots = {workspace=true}

[dev-dependencies]
chrono = {workspace=true}
crud-auth-bearer = {workspace=true}
crud-auth-no-auth = {workspace=true}
is-terminal = {workspace=true}
openssl = {workspace=true}
pretty_env_logger = {workspace=true}
serde_repr = {workspace=true}


[features]
default=["csv", "yaml", "json", "toml"]
csv= ["dep:csv"]
dump-derives=["crud-api-derive/dump-derives"]
yaml= ["dep:serde_yaml"]
json=[]
toml=["dep:toml"]
debug-http=[]
