[package]
name = "crud-auth-bearer"
version = "0.1.3"
edition = "2021"
authors= ["Mose Valvassori <moise.valvassori@gmail.com>"]
description= "Auth bearer for CLI generator for your favorite API."
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.2",features=["cargo","env","unicode"]}
crud-auth = {version = "0.1", path="../crud-auth"}
config = "0.13"
owo-colors = "3.4" # to color the help message


miette = { version = "5.7", features = ["fancy"], optional=true }
toml_edit = { version="0.19", optional=true}

[features]
save_token = ["dep:miette", "dep:toml_edit"]