[package]
name = "crud-auth-bearer"
version = "0.1.6"
edition = "2021"
authors= ["Mose Valvassori <moise.valvassori@gmail.com>"]
description= "Auth bearer for CLI generator for your favorite API."
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {workspace=true}
crud-auth = {workspace=true}
config = {workspace=true}
owo-colors = {workspace=true} # to color the help message
miette = {workspace=true, optional=true}
toml_edit = {workspace=true, optional=true}


[features]
save_token = ["dep:miette", "dep:toml_edit"]
