[package]
name = "crud-auth-no-auth"
version = "0.1.0"
edition = "2021"
authors= ["Mose Valvassori <moise.valvassori@gmail.com>"]
description= "No auth for CLI generator for your favorite API."
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.0",features=["cargo","env","unicode"]}
crud-auth = {version = "0.1", path="../crud-auth"}
config = "0.13"
