[package]
name = "crud-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
miette = { version = "5.1.1", features = ["fancy"] }
#hyper = { version = "0.14", features = ["full"] }
clap = {version="4.0",features=["cargo","env","unicode"]}
config = "0.13"
