[package]
name = "crud-auth"
version = "0.1.5"
edition = "2021"
description= "CLI generator for your API. Auth definition"
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = {workspace=true}
clap = {workspace=true}
config = {workspace=true}

