[package]
name = "crud-derive"
version = "0.1.2"
edition = "2021"
description= "CLI generator for your API. derive Crud implementation."
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

[lib]
proc-macro = true
path = "src/lib.rs" # required by `cargo readme`

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crud-api-endpoint = {version = "0.1", path="../crud-api-endpoint"}
syn = {version="1.0", features=["extra-traits"]}
quote = "1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.32"
darling = { version = "0.14.1" }

[features]
dump-derives=[]
