[package]
name = "crud-derive"
version = "0.1.7"
edition = "2021"
description= "CLI generator for your API. derive Crud implementation."
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

[lib]
proc-macro = true
path = "src/lib.rs" # required by `cargo readme`

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crud-api-endpoint = {workspace=true}
syn = {workspace=true}
quote = {workspace=true}
proc-macro-error = {workspace=true}
proc-macro2 = {workspace=true}
darling = {workspace=true}

[features]
dump-derives=[]
