[package]
name = "crud-pretty-struct-derive"
version = "0.1.7"
edition = "2021"
description= "Pretty display for struct"
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

[lib]
proc-macro = true
path = "src/lib.rs" # required by `cargo readme`


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {workspace=true}
quote = {workspace=true}
proc-macro-error = {workspace=true}
proc-macro2 = {workspace=true}
darling = {workspace=true}
strum = {workspace=true}
unicode-width = {workspace=true}

[dev-dependencies]
owo-colors = {workspace=true}
crud-pretty-struct = {path="../crud-pretty-struct"}
miette = {workspace=true}



[features]
dump-derives=[]
