[package]
name = "crud-pretty-struct"
version = "0.1.6"
edition = "2021"
description= "Pretty display for struct"
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

[lib]
path = "src/lib.rs" # required by `cargo readme`


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crud-pretty-struct-derive = {workspace=true}
owo-colors = {workspace=true}
miette = {workspace=true}
chrono = {workspace=true, optional = true}
humantime = {workspace=true, optional = true}
termimad = {workspace=true, optional = true}
bytesize = {workspace=true, optional = true}
serde_json = {workspace=true}
unicode-width = {workspace=true}
pad = {workspace=true}

[dev-dependencies]
is-terminal = "0.4"

[features]
dump-derives=["crud-pretty-struct-derive/dump-derives"]
chrono=["dep:chrono"]
humantime=["dep:humantime"]
markdown=["dep:termimad"]
bytesize=["dep:bytesize"]
