[package]
name = "crud-tidy-viewer"
version = "0.1.1"
edition = "2021"
description= "CLI generator for your API. Array pretty printer"
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TV
calm_io = "0.1.1"
owo-colors = "3.4.0"
unicode-truncate = "0.2.0"
lazy_static = "1.4.0"
itertools = "0.10.3"
regex = "1.5.6"
atty = "0.2.14"
crossterm = "0.23.2"
# End TV


[dev-dependencies]
miette = { version = "5.1.1", features = ["fancy"] }

