[package]
name = "crud-tidy-viewer"
version = "0.1.5"
edition = "2021"
description= "CLI generator for your API. Array pretty printer"
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TV
calm_io = "0.1"
owo-colors = "3.4"
unicode-truncate = "0.2"
lazy_static = "1.4"
itertools = "0.10"
regex = "1.5"
atty = "0.2"
crossterm = "0.26"
# End TV


[dev-dependencies]
miette = { version = "5.9", features = ["fancy"] }

