[package]
name = "crud-tidy-viewer"
version = "0.1.6"
edition = "2021"
description= "CLI generator for your API. Array pretty printer"
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TV
calm_io = {workspace=true}
owo-colors = {workspace=true}
unicode-truncate = {workspace=true}
lazy_static = {workspace=true}
itertools = {workspace=true}
regex = {workspace=true}
atty = {workspace=true}
crossterm = {workspace=true}
# End TV


[dev-dependencies]
miette = {workspace=true}

