[package]
name = "crud"
version = "0.1.6"
edition = "2021"
authors= ["Mose Valvassori <moise.valvassori@gmail.com>"]
description= "CLI generator for your favorite CRUD REST API."
license = "MIT"
homepage = "https://github.com/djedi23/crud.rs"
repository= "https://github.com/djedi23/crud.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crud-derive = {workspace=true}
crud-api = {workspace=true}
#crud-api-derive = {workspace=true}
crud-api-derive = {workspace=true}
crud-auth = {workspace=true}

[dev-dependencies]
crud-auth-no-auth = {workspace=true}
crud-auth-bearer = {workspace=true}
crud-pretty-struct = {workspace=true}
openssl = {workspace=true}

miette = {workspace=true}
log = {workspace=true}
pretty_env_logger = {workspace=true}
tokio = {workspace=true}
serde = {workspace=true}
hyper = {workspace=true}
clap = {workspace=true}
serde_yaml = {workspace=true}

[[example]]
name="jsonplaceholder"
